# perqed

./: .commit_msg.txt  .cursorrules  .env.example  .geminiignore  .gitignore  Cargo.toml  DEEP_BUGS.md  FORMALIZATION_PROTOCOL.md  GEMINI.md  POSSIBLE_BUGS.md  README.md  agency.json  fix_ts2.py  kovac_tao_construction.lean  kt_unified.lean  lake-manifest.json  lakefile.lean  miracle_disproof.py  package.json  perqed  prompt3.txt  prompt_schur.txt  prompt_schur_gaussian.txt  scratch_sympy.py  test_autoformalize.lean  test_helpers.lean  test_invariant.py  test_limsup.lean  test_lin.lean  test_mono.lean  test_proof.lean  test_signature.lean  test_sketcher.ts  test_trytet_z3.ts
.agents/: harness_upgrades.md  system_rules.md
agent_workspace/: FRONTIER_PROMPTS.md  absolute_upper_bound.lean  dual_constraint_collapse.lean  erdos265_main.lean  lakefile.lean  print_axioms.lean  problem_statement.lean  problem_statement.olean  program_database.jsonl  residual_growth_bound.olean  scratch_R2.lean  subgreedy_bounds.lean  sylvester_ceiling.lean  taylor.py  test.lean  test_bound.lean  test_check.lean  test_dual.lean  test_growth.lean  test_has_sum.lean  test_linear.lean  test_mahler.lean  test_phi.lean  test_phi_bound.lean  test_recurrence.lean  test_rigidity.lean  test_rigidity2.lean  theorem_graph.jsonl  universal_balance.lean  walkthrough.md
crates/perqed_agents/: Cargo.toml
crates/perqed_agents/src/: lib.rs
crates/perqed_cli/: Cargo.toml
crates/perqed_cli/src/: main.rs
crates/perqed_parser/: Cargo.toml  package.json
crates/perqed_parser/src/: lib.rs
data/: claude_cycles_m4.json  claude_cycles_m6.json  draft_paper.tex  erdos_gyarfas_paper.tex  sft_dataset.jsonl
goldbach_exploration/: README.md  crack10_counterexample.c  crack11_distribution_attack.c  crack12_13.c  crack14_15.c  crack16_17.c  crack16_17_v2.c  crack16_deep.c  crack18_fixed.c  crack18_precise.c  crack19_20.c  crack21_contradiction.c  (+68 more)
src/: cli.ts  (+13 more)
tools/neighborhood_search/: .gitignore  Cargo.toml
tools/neighborhood_search/src/: energy.rs  lib.rs  main.rs  matrix.rs  mutation.rs  pipeline.rs
(+2321 files in other folders)
