[package]
name = "perqed_agents"
version = "0.1.0"
edition = "2021"

[dependencies]
perqed_core = { path = "../perqed_core" }
perqed_parser = { path = "../perqed_parser" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.77"
thiserror = "1.0"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
mockito = "1.2.0"
