[package]
name = "perqed_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
perqed_core = { path = "../perqed_core" }
perqed_lean = { path = "../perqed_lean" }
perqed_search = { path = "../perqed_search" }
perqed_parser = { path = "../perqed_parser" }
perqed_agents = { path = "../perqed_agents" }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
async-trait = "0.1.77"
anyhow = "1.0"
