[package]
name = "perqed_parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]

[dependencies]
napi = { version = "2.16.4", default-features = false, features = ["napi4"], optional = true }
napi-derive = { version = "2.16.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.3"
lazy_static = "1.5.0"

[build-dependencies]
napi-build = "2.1.3"
