[package]
name = "neighborhood_search"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "neighborhood_search"
path = "src/main.rs"

[lib]
name = "neighborhood_search"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
# cargo test covers all unit + integration tests

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
